--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - name: backup-db
     type: cron
-    schedule: "0 3 * * *"
+    schedule: "0 6 * * *"
     region: oregon
     env: docker
     plan: standard
@@ -10,12 +10,12 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: replace-with-your-postgres-instance-name
+          name: odoo-care-prod
           property: connectionString
       # pick the region closest to your database
       # For example, us-west-2 for the Oregon region
       - key: AWS_REGION
-        sync: false 
+        sync: us-east-1 
       # A globally unique name for your bucket
       # For example, <your-username>-<database name>-render-postgres-backups
       - key: S3_BUCKET_NAME
