--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - name: backup-db
     type: cron
     schedule: "0 6 * * *"
-    region: oregon
+    region: us-east-2
     env: docker
     plan: standard
     dockerfilePath: ./Dockerfile
